[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Bomb.gd" type="Script" id=1]
[ext_resource path="res://Images/bomb.png" type="Texture" id=2]
[ext_resource path="res://font_bomb.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Images/bar_empty.png" type="Texture" id=4]
[ext_resource path="res://Images/bar_full.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 11 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 49.6327, 35.3553 )

[node name="Bomb" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
scale = Vector2( 2, 2 )
z_index = 2
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 2
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="TimeText" type="Label" parent="."]
margin_left = -7.473
margin_top = -10.138
margin_right = 140.527
margin_bottom = 65.862
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.196078, 0.231373, 0.309804, 1 )
text = "0:90"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Progress" type="TextureProgress" parent="."]
margin_left = -32.0
margin_top = -40.0
margin_right = 32.0
margin_bottom = -24.0
mouse_filter = 2
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_StaticBody2D_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_StaticBody2D_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
